# rustin

./: .gitignore  .rustin.json  Cargo.toml  LICENSE  README.md  build.rs
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
Formula/: rustin.rb
aur/: PKGBUILD
scripts/: install-hooks.sh  update-aur.sh  update-homebrew.sh
src/: main.rs  store.rs
src/commands/: add.rs  archive.rs  bin.rs  display.rs  done.rs  edit.rs  init.rs  inprogress.rs  list.rs  mod.rs  remove.rs  show.rs  stat.rs  todo.rs  tui.rs  undelete.rs
tests/: e2e.rs
