[package]
name = "rustin"
edition = "2024"
authors = ["Gabor Szajko <szajkogabor@gmail.com>"]
description = "A fast, modern, cross-platform to-do list manager written in Rust."
license = "MIT"
repository = "https://github.com/szajkogabor/rustin"
keywords = ["cli", "todo", "kanban", "productivity"]
categories = ["development-tools::cli-utils"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["macros", "formatting"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
console = "0.16.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]
anyhow = "1.0.100"
vergen = { version = "9.1.0", features = ["build"] }
vergen-git2 = "9.1.0"
